72

* Save the page source with mime type text/html (erikos)

71

* Added zoom support with keybindings (erikos)
* Added a view toolbar for fullscreen/tray/zoom (erikos)
* Make outline of the session bookmarks smaller (erikos)
* Use favorite icon for session bookmark and call it Bookmark #3741 (erikos)

70

* Moved the handling from hide/show of the tray to activity window (erikos)

69

* Remove download object when download is canceled when downloaded already 
as well (erikos)
* Make use of the tray support in sugar activity window (erikos)

68

* Adopt 'go' icons (marco)

67

* Use ctrl+t for tray visibility, this should move to sugar-graphics-window (erikos)
* Fix the case where no activity can be associated with the downloaded file (erikos)
* Changed icon for stop button, place alert on top (erikos)

66

* Adapt to sugar API change (marco)

65

* Removed hack to set the right service name for sharing (erikos)
* Removed the clipboard part from the download manager and added alerts (erikos)

64

63

* Fix crash on startup. (marco)
* #3552: Cancel a donwload when the related journal entry is deleted. (tomeu)

62

* #2910 Open popups in the current window (marco)
* Add agent-stylesheet.css and support for blocking flash. (tomeu)
* Add support for agent and user stylesheets. (tomeu)

61

* Adopted to the latest actviity launch changes (erikos)
* Took the import of securitydialog out (erikos)

60

* Limit to 15 entries in the palette of the back/forward buttons (erikos)
* Always start at the first toolbar page (erikos)

59

* Add several ogg subtypes (marco)

57

* Fix a typo, make mime types actually work (marco)

56

* Add more ogg mime types (marco)

55

* Backward compatibility of journal entries to trial-2 (erikos)

54

* Update spanish translation.

53

* Make hide/show of the treay one button #3475 (erikos)

52

* Fix for when participant leaves (erikos)
* #3347 Advertise ogg and wav mime types (marco)
* Added the buttons for hide/show tray (erikos)

51
